--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -666,9 +666,9 @@
 
 #: Window layout {{{
 
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 600
+ remember_window_size  no
+ initial_window_width  88c
+ initial_window_height 35c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -693,7 +693,7 @@
 #: start_resizing_window. The cells value is used for horizontal
 #: resizing, and the lines value is used for vertical resizing.
 
-# window_border_width 0.5pt
+ window_border_width 1pt
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
