--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -8,7 +8,10 @@
   "diagnostic.level": "hint",
   "coc.preferences.formatOnSave": false,
 
-  "Lua.telemetry.enable": false,
   "sumneko-lua.enableNvimLuaDev": true,
   "markdown-preview-enhanced.previewTheme": "one-dark.css",
+  "clangd.fallbackFlags": ["-std=c++20"],
+
+  //hover to show doc
+  "hover.target": "float"
 }
