--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -845,7 +845,7 @@
 
 #: The margin to the left and right of the tab bar (in pts).
 
- tab_bar_margin_height 0.0 0.0
+ tab_bar_margin_height 9.0 0.0
 
 #: The margin above and below the tab bar (in pts). The first number
 #: is the margin between the edge of the OS Window and the tab bar.
@@ -883,7 +883,7 @@
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-# tab_bar_min_tabs 2
+ tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -972,8 +972,11 @@
 # inactive_tab_background #999
 # inactive_tab_font_style normal
 
- tab_title_template "{fmt.fg._000000}{fmt.bg.default} {fmt.fg._5c6370}{fmt.bg._000000} {title.split()[0]} {fmt.fg._000000}{fmt.bg.default}  "
- active_tab_title_template "{fmt.fg._000000}{fmt.bg.default} {fmt.fg._71B5AD}{fmt.bg._000000} {title.split()[0]} {fmt.fg._000000}{fmt.bg.default}  "
+tab_title_template        "{fmt.fg._5c6370}{fmt.bg.default}{fmt.fg._abb2bf}{fmt.bg._5c6370} {title.split()[0]} {fmt.fg._5c6370}{fmt.bg.default} "
+active_tab_title_template "{fmt.fg._e5c07b}{fmt.bg.default}{fmt.fg._282c34}{fmt.bg._e5c07b} {title.split()[0]} {fmt.fg._e5c07b}{fmt.bg.default} "
+
+ # tab_title_template "{fmt.fg._000000}{fmt.bg.default} {fmt.fg._5c6370}{fmt.bg._default} {title.split()[0]} {fmt.fg._000000}{fmt.bg.default}  "
+ # active_tab_title_template "{fmt.fg._000000}{fmt.bg.default} {fmt.fg._71B5AD}{fmt.bg._default} {title.split()[0]} {fmt.fg._000000}{fmt.bg.default}  "
 
 #: Tab bar colors and styles.
 
@@ -1414,8 +1417,7 @@
 #: means to use the default system color, a value of background means
 #: to use the background color of the currently active window and
 #: finally you can use an arbitrary color, such as #12af59 or red.
-
- macos_titlebar_color dark
+# macos_titlebar_color dark
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
@@ -2243,3 +2245,9 @@
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Cobalt Neon
+include current-theme.conf
+# END_KITTY_THEME
