--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -13,5 +13,12 @@
   "clangd.fallbackFlags": ["-std=c++20"],
 
   //hover to show doc
-  "hover.target": "float"
+  "hover.target": "float",
+  "coc.preferences.formatOnSaveTimeout": 500,
+
+  //ts
+  "tsserver.implicitProjectConfig.experimentalDecorators": true,
+  "markdownlint.config": {
+    "line-length": false
+  }
 }
